swis-eks/Kubernetes/traefik-swis_deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${SWIS_NAMESPACE}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${SWIS_NAMESPACE}
  name: ${SWIS_DEPLOYMENT_NAME}
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${SWIS_APP_NAME}
      namespace: ${SWIS_NAMESPACE}
      alpha.eksctl.io/nodegroup-name: ${SWIS_NODE_GROUP}
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${SWIS_APP_NAME}
        namespace: ${SWIS_NAMESPACE}
        alpha.eksctl.io/nodegroup-name: ${SWIS_NODE_GROUP}
    spec:
      containers:
        - image: ${SWIS_REPOSITORY}:${TAG}
          imagePullPolicy: Always
          name: ${SWIS_APP_NAME}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "4500Mi"
            limits:
              memory: "5000Mi"
          volumeMounts:
            - mountPath: /storage
              name: ${SWIS_VOLUME}
      volumes:
        - name: ${SWIS_VOLUME}
          persistentVolumeClaim:
            claimName: ${SWIS_PVC}
      nodeSelector:
        "eks.amazonaws.com/nodegroup": ${SWIS_NODE_GROUP}

---
apiVersion: v1
kind: Service
metadata:
  namespace: ${SWIS_NAMESPACE}
  name: ${SWIS_SERVICE_NAME}
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ${SWIS_APP_NAME}
    namespace: ${SWIS_NAMESPACE}
    alpha.eksctl.io/nodegroup-name: ${SWIS_NODE_GROUP}

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ${SWIS_MIDDLEWARE_NAME}
  namespace: ${SWIS_NAMESPACE}
spec:
  headers:
    customResponseHeaders:
      X-XSS-Protection: "1; mode=block"
      Strict-Transport-Security: "max-age=31536000; includeSubdomains; preload"
      Cache-Control: "no-cache, no-store, must-revalidate"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${SWIS_INGRESSROUTE_NAME}
  namespace: ${SWIS_NAMESPACE}
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${SWIS_HOST_NAME}`)
      kind: Rule
      middlewares:
        - name: ${SWIS_MIDDLEWARE_NAME}
      services:
        - name: ${SWIS_SERVICE_NAME}
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${TRAEFIK_SERVICE_NAMESPACE}
  name: ${SWIS_INGRESS_NAME}
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${SWIS_HOST_NAME}
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: ${SWIS_CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: ${SWIS_ALB}
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=200
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:387102133919:regional/webacl/SS_WAF_v2_Prod/df5df1d1-99f5-420a-94e9-50398bd50b4f
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  labels:
    app: ${TRAEFIK_SERVICE_NAMESPACE}
spec:
  ingressClassName: alb
  rules:
    - host: ${SWIS_HOST_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${TRAEFIK_SERVICE_NAMESPACE}
                port:
                  number: 80
